# apps/api/src/app.module.ts
@@ -19,6 +19,7 @@ import { SearchModule } from './modules/search/search.module';
 import { HotelsModule } from './modules/hotels/hotels.module';
 import { RestaurantsModule } from './modules/restaurants/restaurants.module';
 import { ToursModule } from './modules/tours/tours.module';
+import { AttractionsModule } from './modules/attractions/attractions.module';
 import { EventsModule } from './modules/events/events.module';
 import { SourcesModule } from './modules/sources/sources.module';
 import { ReviewsModule } from './modules/reviews/reviews.module';
@@ -48,6 +49,7 @@ import { ReviewsModule } from './modules/reviews/reviews.module';
     HotelsModule,
     RestaurantsModule,
     ToursModule,
+    AttractionsModule,
     EventsModule,
     SourcesModule,
     ReviewsModule,
